[package]
name = "portfolio_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
config = "0.15.19"
fs = "0.0.5"
id3 = "1.16.3"
io = "0.0.2"
property = "0.3.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["io"] }
tower-http = { version = "0.6.6", features = ["fs"] }
